--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -14,6 +14,22 @@ cite {
   padding-left: 0px;
 }
 
+body {
+  width: 960px;
+  display: table-row;
+}
+
+#external-links {
+  width: 200px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+main {
+  width: 756px;
+  display: table-cell;
+}
+
 /* you're welcome to edit the
 image, figure, and figcaption CSS if you'd like, 
 but it's optional! */
